// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DateLocale with month in JP locale correctly 1`] = `
<div
  className=""
>
  2019jp-cook-with-love-year-singularjp-cook-with-love-month-1
</div>
`;

exports[`should render DateLocale with month in non-JP locale correctly 1`] = `
<div
  className=""
>
  gb-cook-with-love-month-1 2019
</div>
`;

exports[`should render DateLocale without month in JP locale correctly 1`] = `
<div
  className=""
>
  2019jp-cook-with-love-year-singular
</div>
`;

exports[`should render DateLocale without month in non-JP locale correctly 1`] = `
<div
  className=""
>
  2019
</div>
`;
